--- a/site/templates/css/00_millco_base.css
+++ b/site/templates/css/00_millco_base.css
@@ -79,7 +79,47 @@
 --font-condensed: Monoton, Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans-serif;
 
 
+/*=============================
+ Fluid Type sizes from
+ https://utopia.fyi/
+=============================*/
+
+  /* @link https://utopia.fyi/type/calculator?c=320,16,1.333,1240,24,1.333,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+
+  --step--2: clamp(0.75rem, 0.46rem + 0.49vw, 0.84rem);
+  --step--1: clamp(0.875rem, 0.62rem + 0.65vw, 1.13rem);
+  --step-0: clamp(1.00rem, 0.83rem + 0.87vw, 1.50rem);
+  --step-05: clamp(1.00rem, 1rem + 1.0vw, 1.75rem);
+  --step-1: clamp(1.33rem, 1.10rem + 1.16vw, 2.00rem);
+  --step-2: clamp(1.78rem, 1.47rem + 1.55vw, 2.67rem);
+  --step-3: clamp(2.37rem, 1.96rem + 2.06vw, 3.55rem);
+  --step-4: clamp(3.16rem, 2.61rem + 2.75vw, 4.74rem);
+  --step-5: clamp(4.21rem, 3.48rem + 3.66vw, 6.31rem);
+
+
+/* Current (v5.0) Boostrap breakpoints are 
+X-Small 	None 	<576px
+Small 	sm 	≥576px
+Medium 	md 	≥768px
+Large 	lg 	≥992px
+Extra large 	xl 	≥1200px
+Extra extra large 	xxl 	≥1400px
+*/
+
+--gap: 0.75rem;
+--gap-small: 0.5rem;
+
+--gutter : 8px;
+
+--grid-min: 45ch;
+
+--max-container-width: 1460px;
+--max-container-width-small: 1095px;
+
+accent-color:var(--theme);
+
 }
+
 
 
 /*=============================
