--- a/site/templates/css/100_shops.css
+++ b/site/templates/css/100_shops.css
@@ -1,87 +1,87 @@
+@media(min-width: 768px) {
 
-@media(min-width: 768px ){
-
-    .shopping_list{
-        columns: 3;
-    }
+	.shopping_list {
+		columns: 3;
+	}
 
 }
 
-.shop_main{
-    padding:0;
+.shop_main {
+	padding: 0;
 }
 
 .shop_meta {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	gap: var(--gap-small)
 }
 
-.shop_meta h3{
-    margin-bottom: 0.5rem;
+.shop_meta h3 {
+	margin-bottom: 0.5rem;
 }
 
-.history_grid{
-    display: grid;
-    grid-template-columns: auto 1fr;
-    column-gap:1rem;
+.history_grid {
+	display: grid;
+	grid-template-columns: auto 1fr;
+	column-gap: 1rem;
 }
 
-.history_label{
-    font-weight: var(--strong);
+.history_label {
+	font-weight: var(--strong);
 }
 
-.shop_in_list{
-    display: grid;
-    grid-template-columns: 1fr;
-    gap:2rem;
+.shop_in_list {
+	display: grid;
+	grid-template-columns: 1fr;
+	gap: 2rem;
 }
 
-.shop_head_title{
-    min-width: 320px;
-    margin-bottom: 2rem;
+.shop_head_title {
+	min-width: 320px;
+	margin-bottom: 2rem;
 }
 
-@media(min-width: 992px ){
+@media(min-width: 992px) {
 
-    .shop_grid{
-        display: flex;
-        gap:3rem;
-        width: 100%;
-    }
+	.shop_grid {
+		display: flex;
+		gap: 3rem;
+		width: 100%;
+	}
 
-    .shop_in_list{
-        grid-template-columns: 1fr 1fr 1fr;
-        gap:3rem;
-    }
+	.shop_in_list {
+		grid-template-columns: 1fr 1fr 1fr;
+		gap: 3rem;
+	}
 
-    .shop_in_list.col_count_2{
-        grid-template-columns: 1fr 1fr;
-    }
-    
-    .shop_main{
-        flex:1;
-    }
+	.shop_in_list.col_count_2 {
+		grid-template-columns: 1fr 1fr;
+	}
 
-    .shop_1{
-        flex:1;
-    }
+	.shop_main {
+		flex: 1;
+	}
 
-    .shop_head_title{
-        flex: 1;
-    }
-    
-    .shop_meta{
-        flex: 1;
-    }
+	.shop_1 {
+		flex: 1;
+	}
+
+	.shop_head_title {
+		flex: 1;
+	}
+
+	.shop_meta {
+		flex: 1;
+	}
 
 }
 
 /* Gallery bits */
 
-.gallery{
-    background-color: var(--dark);
-    padding:0 2rem;
+.gallery {
+	background-color: var(--dark);
+	padding: 0 2rem;
 }
 
 .gallery_image_grid {
@@ -91,64 +91,66 @@
 	grid-template-columns: 1fr 1fr;
 }
 
-.gallery_image{
-    background-color: white;
-    min-width: 100px;
-    max-width: 260px;
-        border: 4px solid #FFFFFF;
-        filter: drop-shadow(0px 0px 16px rgba(0, 0, 0, 0.65));
-      }
-    
-
-.gallery_image:hover{
-    transition:var(--transition);
-    border-color: var(--dark);
+.gallery_image {
+	background-color: white;
+	min-width: 100px;
+	max-width: 260px;
+	border: 4px solid #FFFFFF;
+	filter: drop-shadow(0px 0px 16px rgba(0, 0, 0, 0.65));
 }
 
-.gallery_image:focus{
-    opacity: 0.5;
+
+.gallery_image:hover {
+	transition: var(--transition);
+	border-color: var(--dark);
 }
 
-.gallery_image figure{
-    margin-bottom: 0;
+.gallery_image:focus {
+	opacity: 0.5;
 }
 
-.gallery_image img{
-   display: block;
-   width:100%;
-   height:auto;
+.gallery_image figure {
+	margin-bottom: 0;
 }
 
-.lf_slide_meta{
+.gallery_image img {
+	display: block;
+	width: 100%;
+	height: auto;
+}
+
+.lf_slide_meta {
 	display: none;
 }
 
-.pswp__slide_meta{
-	position:absolute;
-	bottom:10px;
-	left:0;
-	width:100%;
-	color:var(--dark);
+.pswp__slide_meta {
+	position: absolute;
+	bottom: 10px;
+	left: 0;
+	width: 100%;
+	color: var(--dark);
 	font-size: 1rem;
 	text-align: center;
 }
 
-.slm_decade{
+.slm_decade {
 	font-weight: 800;
 	font-size: 1.3rem;
 }
 
-.slm_title{
+.slm_title {
 	font-weight: 600;
 	font-size: 1.125rem;
 }
 
-.pswp__bg { background: white !important; }
+.pswp__bg {
+	background: white !important;
+}
 
 .pswp__icn {
-    fill: var(--dark) !important;
-    color: var(--green) !important;
-  }
+	fill: var(--dark) !important;
+	color: var(--green) !important;
+}
 
 
 
@@ -157,7 +159,7 @@
 	margin: 15px 0 0 20px;
 	font-size: 14px;
 	line-height: 30px;
-    color: var(--dark) !important;
+	color: var(--dark) !important;
 	opacity: 0.85;
 	background-color: white;
 	padding: 0 4px;
@@ -165,27 +167,24 @@
 }
 
 
-.shop_map{
-    background-color: var(--grey-light);
-    max-width: 600px;
-    min-height: 160px;
-    aspect-ratio: 2 / 1;
-    margin-top:1rem;
+.shop_map {
+	background-color: var(--grey-light);
+	max-width: 600px;
+	min-height: 160px;
+	aspect-ratio: 2 / 1;
 }
 
+.brsa_map_pin {
+	width: 18px !important;
+	height: 18px !important;
+	background-color: var(--dark);
+	padding: 0;
+	border: 2px solid white;
+	border-radius: 50%;
+	position: relative;
+}
 
-
-.brsa_map_pin{
-    width:18px !important;
-    height:18px !important;
-    background-color: var(--dark);
-    padding:0;
-    border:2px solid white;
-    border-radius: 50%;
-    position: relative;
-  }
-  
-  .brsa_map_pin::before {
+.brsa_map_pin::before {
 	content: ' ';
 	width: 4px !important;
 	height: 4px !important;
@@ -197,30 +196,36 @@
 	border-radius: 50%;
 }
 
+.meta_modified {
+	font-size: var(--step--2);
+	text-align: right;
+	color: var(--grey-mid);
+}
+
 /* az lists */
 
 ul.az li {
 	display: inline-flex;
-    border-bottom: 1px solid #ccc;
-    padding:0 0.25rem;
-    margin-bottom: 2rem;
+	border-bottom: 1px solid #ccc;
+	padding: 0 0.25rem;
+	margin-bottom: 2rem;
 }
 
-ul.az li a{
-    display: block;
+ul.az li a {
+	display: block;
 
 	padding: 0.25rem 2.5rem;
 	border: 1px solid black;
 	border-top-left-radius: 0.5rem;
-    border-top-right-radius: 0.5rem;
-    border-bottom: 0;
-    background-color:#fafafa;
-    text-decoration: none;
-    font-weight: var(--strong);
-    font-size: 1.25rem;
-    text-transform: uppercase;
+	border-top-right-radius: 0.5rem;
+	border-bottom: 0;
+	background-color: #fafafa;
+	text-decoration: none;
+	font-weight: var(--strong);
+	font-size: 1.25rem;
+	text-transform: uppercase;
 }
 
-ul.az li a:hover{
-    background-color: #ccc;
+ul.az li a:hover {
+	background-color: #ccc;
 }
