Adding cats and layout tweaks

--- a/site/templates/admin.less
+++ b/site/templates/admin.less
@@ -20,7 +20,7 @@
  @reno-muted-background: #f0f3f7;
  @reno-muted-text-color: #6f7580; // #8d939e; 
  @reno-muted-text-color-alternate: #577898; // #6c8dae; 
- @reno-primary-background: #008668; // #3eb998;
+ @reno-primary-background: #cc4747; // #3eb998;
  @reno-secondary-background: #e2e9ef;
  @reno-success-background: #8bccde;
  @reno-success-color: @reno-text-color;
@@ -39,7 +39,7 @@
  @reno-masthead-link-hover-color: lightblue;
  @reno-masthead-link-current-color: #fff;
  @reno-masthead-icon-color: #6f7580; // #8d939e;
- @reno-masthead-search-text-color: #8d939e; // #008668
+ @reno-masthead-search-text-color: #8d939e; // ##cc4747
  @reno-masthead-search-background: transparent;
  @reno-masthead-search-border-color: lighten(#253447, 10%);
  @reno-masthead-search-focus-background: lighten(#253447, 5%);
