CSS tweak next / previous

--- a/site/templates/css/100_shops.css
+++ b/site/templates/css/100_shops.css
@@ -229,3 +229,9 @@ ul.az li a {
 ul.az li a:hover {
 	background-color: #ccc;
 }
+
+/* next / previous */
+
+.brsa_next_previous{
+	margin-top: var(--gap);
+}
