more maps bits I think

--- a/site/templates/css/00_millco_base.css
+++ b/site/templates/css/00_millco_base.css
@@ -125,9 +125,20 @@ accent-color:var(--theme);
 /*=============================
   Base Styles
 =============================*/
-* {
+/* Box sizing rules */
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
+
+/* Prevent font size inflation */
+html {
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+
 html,
 body {
   margin: 0;
