--- a/site/templates/css/100_shops.css
+++ b/site/templates/css/100_shops.css
@@ -14,7 +14,8 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	gap: var(--gap-small)
+	gap: var(--gap-small);
+	font-size: var(--step--2);
 }
 
 .shop_meta h3 {
