--- a/site/templates/css/20_typography.css
+++ b/site/templates/css/20_typography.css
@@ -82,7 +82,6 @@ caption,
     color:white;
 }
 
-
 h1,
 .site_title_link{
     display: flex;
@@ -90,14 +89,16 @@ h1,
     font-weight: var(--strong);
     text-decoration: none;
     color:black;
-    font-size:clamp(1.1rem, 2.2vw, 2.8rem);
+    font-size:var(--step-3);
+	line-height: 1.2;
 }
 
 h2, .h2{
-    font-size: 2.25rem;
+    font-size:var(--step-2);
     font-weight: var(--strong);
     margin-top:0;
     margin-bottom: 1rem;
+	line-height: 1.2;
 }
 
 h3, .h3{
@@ -196,7 +197,7 @@ h3, .h3{
 }
 
 .text-measure {
-	max-width: 620px;
+	max-width: 68ch;
 }
 
 .text-right{
