--- a/site/templates/css/50_pages.css
+++ b/site/templates/css/50_pages.css
@@ -1,7 +1,7 @@
 /* home */
 
 .home_main{
-    background: url('/site/assets/images/homepage_bg.svg') no-repeat;
+    background: url('/site/assets/images/homepage_bg_new.svg?v=5') no-repeat;
     background-size: 40vw;
     background-position: top right;
     background-color: white;
@@ -22,8 +22,6 @@
 @media(min-width: 768px ){
 
     .home_main{
-
-        background: url('/site/assets/images/homepage_bg.svg') no-repeat;
         background-size: 100%;
         background-position: top right;
         background-color: white;
